2003-02-13  Richard Frith-Macdonald <rfm@gnu.org>

	* GormOutlineView.m: Fix code to update view when outlet/action
	images are clicked on.

2003-02-10  Richard Frith-Macdonald <rfm@gnu.org>

	* GormInspectorsManager.m: in browser delegate re-ordered mechanism
	for establishing updates to browsers.  Fixed and added to the code
	ensuring that highlighting of browser elements correctly indicates
	established connections clearly.

2003-02-10  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* GormInspectorsManager.m: _internalCall:
	only reload the column when needed, this was causing segfaults
	with the new lockFocus code.

2003-02-02  Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/GormTableViewEditor.m: missing
	"else" was causing an exception to be thrown when attempting
	to delete a column in NSTableView when nothing is selected.
	
2003-01-23  Gregory John Casamento <greg_casamento@yahoo.com>
	
	* Gorm.m: Some general cleanup.  Removed the startuptime
	message.  Indented some code to conform to guidelines.
	* GModelDecoder.m: Added GormNSPanel to the set of classes
	translated so that the window inspectors can be used to edit.
	* Documentation/readme.texi: Updated to show current status.
	
2003-01-22  Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Removed reference to NSImageDoesCaching.
	This variable was removed in the gui library and was causing
	compilation to fail.   Also cleaned up main() by getting rid
	of some old comments.
	
2003-01-21  Adam Fedor  <fedor@gnu.org>

	* Version: 0.2.5

2003-01-16  Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: awakeFromNib added to set the mainMenu to
	the new menu defined in the .gorm file.   This is to
	correct a bug when testing the interface.
	* GormPrivate.h: Added new outlet to hold Gorm menu.
	* Resources/Gorm.gorm: Added outlet for gormMenu.

2003-01-15  Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: [NSWindowTemplate initWithObject:]: corrected